--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.MaterialComponents.Light"
         tools:targetApi="33" >
         <activity
             android:name=".GoogleSignInActivity"
@@ -22,13 +22,15 @@
         </activity>
         <activity
             android:name=".onboarding"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".signIn"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="true" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -43,6 +45,7 @@
         </activity>
         <activity
             android:name=".signup"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -65,7 +68,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
