--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,26 +34,34 @@ android {
 
 dependencies {
 
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    def lottieVersion = "3.4.0"
+    def lottieVersion = '6.0.0'
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
-    implementation platform('com.google.firebase:firebase-bom:31.1.1')
-    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
-    implementation 'com.google.android.material:material:1.9.0-alpha02'
-    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+    implementation 'com.google.android.material:material:1.9.0-beta01'
+    implementation "androidx.drawerlayout:drawerlayout:1.2.0"
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
